fixed visibility onload

--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -62,6 +62,9 @@ body {
     background-repeat: no-repeat;
     overflow:hidden;
 }
+.imga, .imgb, .imgc {
+    visibility: hidden;
+}
 
 #imgb {
     height: 0;
